--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>The dude sitting to my right</title>
+  </head>
+  <body>
+    Hello Leo Marquez
+  </body>
+</html>
